fix bags with buy img size and z-index

--- a/src/Components/PartsOutput/PartsOutput.scss
+++ b/src/Components/PartsOutput/PartsOutput.scss
@@ -25,7 +25,7 @@
             opacity: 0;
             transition: opacity .3s ease-in-out;
             position: absolute;
-            z-index: 10;
+            z-index: 7;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -35,6 +35,9 @@
                 padding: 9px;
                 outline: none;
                 border: none;
+                &-img{
+                    width: 32px !important ;
+                }
                 &-link{
                     border-left: 1px solid #f18a5f;
                 }
