--- a/src/Components/ProductsSection/ProductsSection.scss
+++ b/src/Components/ProductsSection/ProductsSection.scss
@@ -47,7 +47,7 @@
                 opacity: 0;
                 transition: opacity .3s ease-in-out;
                 position: absolute;
-                z-index: 10;
+                z-index: 7;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
@@ -59,6 +59,9 @@
                     border: none;
                     &-link{
                         border-left: 1px solid #f18a5f;
+                    }
+                    &-img{
+                        width: 32px !important;
                     }
                 }
             }
